添加上传图片限制，默认可以上传9张

--- a/plugin/components/upload/upload.wxml
+++ b/plugin/components/upload/upload.wxml
@@ -17,6 +17,7 @@
         </view>
     <view>
       <image  class='upload-image' 
+              wx:if="{{!hiddenIcon}}"
               bindtap='selectImage'
               style='width:{{iconInfo.width}};height:{{iconInfo.height}}'
               src='{{iconInfo.path}}'></image>
